--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,11 @@
           <artifactId>hadoop-yarn-client</artifactId>
           <version>${hadoop.version}</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-aws</artifactId>
+          <version>${hadoop.version}</version>
+        </dependency>
     </dependencies>
     </profile>
   </profiles>
