--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     <log4j.version>1.2.16</log4j.version>
     <zookeeper.version>3.4.5</zookeeper.version>
     <ant.version>1.7.1</ant.version>
+    <jets3t.version>0.9.3</jets3t.version>
   </properties>
 
   <repositories>
@@ -125,7 +126,7 @@
   <profiles>
     <profile>
       <id>hadoop1</id>
-      
+
       <modules>
         <module>c++</module>
         <module>commons</module>
@@ -136,7 +137,7 @@
         <module>mesos</module>
         <module>dist</module>
       </modules>
-      
+
       <dependencies>
         <!-- build for Hadoop 1.x -->
         <dependency>
@@ -171,7 +172,7 @@
         <module>yarn</module>
         <module>dist</module>
       </modules>
-  
+
       <dependencies>
         <!-- build for Hadoop 2.x -->
         <dependency>
@@ -214,6 +215,11 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-aws</artifactId>
           <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>net.java.dev.jets3t</groupId>
+          <artifactId>jets3t</artifactId>
+          <version>${jets3t.version}</version>
         </dependency>
     </dependencies>
     </profile>
